# py-quantfin-py

./: LICENSE  README.md  pyproject.toml
quantfin/: __init__.py
tests/: test_quantfin.py
